2007-02-07  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/chemdrawcdx.cpp: make it work on little-endian
	machines.

2007-02-02 Chris Morley

	* include/openbabel/mol.h: Remove definition of Separate()
	which was added prematurely.
	
2007-02-05  Noel O'Boyle <baoilleach@gmail.com>

	* scripts: Removed %apply of OUTPUT and regenerated scripts

2007-02-02 Chris Morley

	* windows-vc2005/Distribution: remove the Windows DLLs added
	yesterday.

2007-02-01 Chris Morley

	* windows-vc2005/Distribution: add some Windows DLLs for the 
	installer.

2007-01-31  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/canon.h, src/canon.cpp: Add canonical
	numbering code from Craig James. (Eventually needs integration
	into other methods -- these duplicate since they support
	fragments.)

	* src/formats/cansmilesformat.*: Add CANSMI format for Canonical
	SMILES output. Eventually needs better integration into current
	SMI format rather than duplication.

	* src/Makefile.* include/openbabel/Makefile.*: Add above files.

2007-01-27  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/cdxmlformat.cpp: add support for formal charges.

2007-01-26  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: fixed issues in writing
	multi-molecules files.

2007-01-26 Chris Morley

	* src/obconversion.cpp, include/openbabel/obconversion.h: Mitigate
	some of the uncertainties in writing multi-molecule files.
	pointed out by Jean Brefort, including bug 1644241.
	Added SetLast as an alternative name for SetOneObjectedOnly.
	Added documentation to GetOutputIndex().
	
2007-01-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: scale bond lentghs to 30 (using the
	first molecule) and enable write support.

2007-01-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: add some stereochemistry and initial
	write support (not enabled).
